@@ -21,24 +21,16 @@
 package com.orientechnologies.orient.core.storage.impl.local.paginated.wal;
 
 import com.orientechnologies.common.serialization.types.OIntegerSerializer;
+import com.orientechnologies.common.serialization.types.OShortSerializer;
 import com.orientechnologies.common.util.OPair;
-import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.cas.OEmptyWALRecord;
-import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.cas.OWriteableWALRecord;
-import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.co.cellbtreemultivalue.OCellBTreeMultiValuePutCO;
-import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.co.cellbtreemultivalue.OCellBtreeMultiValueRemoveEntryCO;
-import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.co.cellbtreesinglevalue.OCellBTreeSingleValuePutCO;
-import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.co.cellbtreesinglevalue.OCellBTreeSingleValueRemoveCO;
-import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.co.indexengine.OIndexEngineCreateCO;
-import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.co.indexengine.OIndexEngineDeleteCO;
-import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.co.localhashtable.OLocalHashTablePutCO;
-import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.co.localhashtable.OLocalHashTableRemoveCO;
-import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.co.paginatedcluster.*;
-import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.co.sbtree.OSBTreePutCO;
-import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.co.sbtree.OSBTreeRemoveCO;
-import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.co.sbtreebonsai.OSBTreeBonsaiCreateCO;
-import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.co.sbtreebonsai.OSBTreeBonsaiCreateComponentCO;
-import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.co.sbtreebonsai.OSBTreeBonsaiDeleteCO;
-import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.po.cellbtree.multivalue.v2.bucket.CellBTreeMultiValueV2BucketInitPO;
+import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.common.EmptyWALRecord;
+import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.common.WriteableWALRecord;
+import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.po.cellbtree.multivalue.v2.bucket.*;
+import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.po.cellbtree.multivalue.v2.entrypoint.CellBTreeMultiValueV2EntryPointInitPO;
+import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.po.cellbtree.multivalue.v2.entrypoint.CellBTreeMultiValueV2EntryPointSetEntryIdPO;
+import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.po.cellbtree.multivalue.v2.entrypoint.CellBTreeMultiValueV2EntryPointSetPagesSizePO;
+import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.po.cellbtree.multivalue.v2.entrypoint.CellBTreeMultiValueV2EntryPointSetTreeSizePO;
+import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.po.cellbtree.multivalue.v2.nullbucket.*;
 import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.po.cellbtree.singlevalue.v1.bucket.*;
 import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.po.cellbtree.singlevalue.v1.entrypoint.CellBTreeEntryPointSingleValueV1InitPO;
 import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.po.cellbtree.singlevalue.v1.entrypoint.CellBTreeEntryPointSingleValueV1SetPagesSizePO;
@@ -66,6 +58,17 @@ import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.po.clu
 import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.po.cluster.v2.paginatedclusterstate.PaginatedClusterStateV2SetFreeListPagePO;
 import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.po.cluster.v2.paginatedclusterstate.PaginatedClusterStateV2SetRecordsSizePO;
 import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.po.cluster.v2.paginatedclusterstate.PaginatedClusterStateV2SetSizePO;
+import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.po.localhashtable.v2.bucket.*;
+import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.po.localhashtable.v2.directoryfirstpage.*;
+import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.po.localhashtable.v2.directorypage.LocalHashTableV2DirectoryPageSetMaxLeftChildDepthPO;
+import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.po.localhashtable.v2.directorypage.LocalHashTableV2DirectoryPageSetMaxRightChildDepthPO;
+import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.po.localhashtable.v2.directorypage.LocalHashTableV2DirectoryPageSetNodeLocalDepthPO;
+import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.po.localhashtable.v2.directorypage.LocalHashTableV2DirectoryPageSetPointerPO;
+import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.po.localhashtable.v2.metadatapage.LocalHashTableV2MetadataPageInitPO;
+import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.po.localhashtable.v2.metadatapage.LocalHashTableV2MetadataPageSetRecordsCountPO;
+import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.po.localhashtable.v2.nullbucket.LocalHashTableV2NullBucketInitPO;
+import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.po.localhashtable.v2.nullbucket.LocalHashTableV2NullBucketRemoveValuePO;
+import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.po.localhashtable.v2.nullbucket.LocalHashTableV2NullBucketSetValuePO;
 import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.po.sbtree.v1.bucket.*;
 import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.po.sbtree.v1.nullbucket.SBTreeNullBucketV1InitPO;
 import com.orientechnologies.orient.core.storage.impl.local.paginated.wal.po.sbtree.v1.nullbucket.SBTreeNullBucketV1RemoveValuePO;
@@ -78,6 +81,7 @@ import net.jpountz.lz4.LZ4Compressor;
 import net.jpountz.lz4.LZ4Factory;
 import net.jpountz.lz4.LZ4FastDecompressor;
 
+import java.lang.reflect.InvocationTargetException;
 import java.nio.ByteBuffer;
 import java.nio.ByteOrder;
 import java.util.HashMap;
@@ -90,20 +94,20 @@ import static com.orientechnologies.orient.core.storage.impl.local.paginated.wal
  * @since 25.04.13
  */
 public final class OWALRecordsFactory {
-  private final Map<Byte, Class> idToTypeMap = new HashMap<>();
+  private final Map<Integer, Class> idToTypeMap = new HashMap<>();
 
   public static final OWALRecordsFactory INSTANCE = new OWALRecordsFactory();
 
   private static final LZ4Factory factory                    = LZ4Factory.fastestInstance();
   private static final int        MIN_COMPRESSED_RECORD_SIZE = 8 * 1024;
 
-  public static OPair<ByteBuffer, Long> toStream(final OWriteableWALRecord walRecord) {
-    final int contentSize = walRecord.serializedSize() + 1;
+  public static OPair<ByteBuffer, Long> toStream(final WriteableWALRecord walRecord) {
+    final int contentSize = walRecord.serializedSize() + 2;
 
     final ByteBuffer content = ByteBuffer.allocate(contentSize).order(ByteOrder.nativeOrder());
 
-    final byte recordId = walRecord.getId();
-    content.put(recordId);
+    final int recordId = walRecord.getId();
+    content.putShort((short) recordId);
     walRecord.toStream(content);
 
     if (MIN_COMPRESSED_RECORD_SIZE <= 0 || contentSize < MIN_COMPRESSED_RECORD_SIZE) {
@@ -113,16 +117,16 @@ public final class OWALRecordsFactory {
     final LZ4Compressor compressor = factory.fastCompressor();
     final int maxCompressedLength = compressor.maxCompressedLength(contentSize - 1);
 
-    final ByteBuffer compressedContent = ByteBuffer.allocate(maxCompressedLength + 5).order(ByteOrder.nativeOrder());
+    final ByteBuffer compressedContent = ByteBuffer.allocate(maxCompressedLength + 6).order(ByteOrder.nativeOrder());
 
-    content.position(1);
-    compressedContent.position(5);
-    final int compressedLength = compressor.compress(content, 1, contentSize - 1, compressedContent, 5, maxCompressedLength);
+    content.position(2);
+    compressedContent.position(6);
+    final int compressedLength = compressor.compress(content, 2, contentSize - 2, compressedContent, 6, maxCompressedLength);
 
-    if (compressedLength + 5 < contentSize) {
-      compressedContent.limit(compressedLength + 5);
-      compressedContent.put(0, (byte) (-(recordId + 1)));
-      compressedContent.putInt(1, contentSize);
+    if (compressedLength + 6 < contentSize) {
+      compressedContent.limit(compressedLength + 6);
+      compressedContent.putShort(0, (short) (-(recordId + 1)));
+      compressedContent.putInt(2, contentSize);
 
       return new OPair<>(compressedContent, 0L);
     } else {
@@ -130,19 +134,33 @@ public final class OWALRecordsFactory {
     }
   }
 
-  public OWriteableWALRecord fromStream(byte[] content) {
-    if (content[0] < 0) {
-      final int originalLen = OIntegerSerializer.INSTANCE.deserializeNative(content, 1);
+  public WriteableWALRecord fromStream(byte[] content) {
+    int recordId = OShortSerializer.INSTANCE.deserializeNative(content, 0);
+    if (recordId < 0) {
+      final int originalLen = OIntegerSerializer.INSTANCE.deserializeNative(content, 2);
       final byte[] restored = new byte[originalLen];
 
       final LZ4FastDecompressor decompressor = factory.fastDecompressor();
-      decompressor.decompress(content, 5, restored, 1, restored.length - 1);
-      restored[0] = (byte) (-content[0] - 1);
+      decompressor.decompress(content, 6, restored, 2, restored.length - 2);
+      recordId = -recordId - 1;
       content = restored;
     }
 
-    final OWriteableWALRecord walRecord;
-    switch (content[0]) {
+    final WriteableWALRecord walRecord = walRecordById(recordId);
+
+    walRecord.fromStream(content, 2);
+
+    if (walRecord.getId() != recordId) {
+      throw new IllegalStateException(
+          "Deserialized WAL record id does not match to the serialized record id " + walRecord.getId() + " - " + content[0]);
+    }
+
+    return walRecord;
+  }
+
+  private WriteableWALRecord walRecordById(final int recordId) {
+    final WriteableWALRecord walRecord;
+    switch (recordId) {
     case UPDATE_PAGE_RECORD:
       walRecord = new OUpdatePageRecord();
       break;
@@ -174,67 +192,7 @@ public final class OWALRecordsFactory {
       walRecord = new OFileDeletedWALRecord();
       break;
     case EMPTY_WAL_RECORD:
-      walRecord = new OEmptyWALRecord();
-      break;
-    case CREATE_CLUSTER_CO:
-      walRecord = new OPaginatedClusterCreateCO();
-      break;
-    case DELETE_CLUSTER_CO:
-      walRecord = new OPaginatedClusterDeleteCO();
-      break;
-    case CLUSTER_CREATE_RECORD_CO:
-      walRecord = new OPaginatedClusterCreateRecordCO();
-      break;
-    case CLUSTER_DELETE_RECORD_CO:
-      walRecord = new OPaginatedClusterDeleteRecordCO();
-      break;
-    case CLUSTER_ALLOCATE_RECORD_POSITION_CO:
-      walRecord = new OPaginatedClusterAllocatePositionCO();
-      break;
-    case CLUSTER_UPDATE_RECORD_CO:
-      walRecord = new OPaginatedClusterUpdateRecordCO();
-      break;
-    case INDEX_ENGINE_CREATE_CO:
-      walRecord = new OIndexEngineCreateCO();
-      break;
-    case INDEX_ENGINE_DELETE_CO:
-      walRecord = new OIndexEngineDeleteCO();
-      break;
-    case CELL_BTREE_SINGLE_VALUE_PUT_CO:
-      walRecord = new OCellBTreeSingleValuePutCO();
-      break;
-    case CELL_BTREE_SINGLE_VALUE_REMOVE_CO:
-      walRecord = new OCellBTreeSingleValueRemoveCO();
-      break;
-    case CELL_BTREE_MULTI_VALUE_PUT_CO:
-      walRecord = new OCellBTreeMultiValuePutCO();
-      break;
-    case CELL_BTREE_MULTI_VALUE_REMOVE_ENTRY_CO:
-      walRecord = new OCellBtreeMultiValueRemoveEntryCO();
-      break;
-    case SBTREE_PUT_CO:
-      walRecord = new OSBTreePutCO();
-      break;
-    case SBTREE_REMOVE_CO:
-      walRecord = new OSBTreeRemoveCO();
-      break;
-    case LOCAL_HASHTABLE_PUT_CO:
-      walRecord = new OLocalHashTablePutCO();
-      break;
-    case LOCAL_HASHTABLE_REMOVE_CO:
-      walRecord = new OLocalHashTableRemoveCO();
-      break;
-    case SBTREE_BONSAI_CREATE_COMPONENT_CO:
-      walRecord = new OSBTreeBonsaiCreateComponentCO();
-      break;
-    case SBTREE_BONSAI_CREATE_CO:
-      walRecord = new OSBTreeBonsaiCreateCO();
-      break;
-    case SBTREE_BONSAI_DELETE_COMPONENT_CO:
-      walRecord = new com.orientechnologies.orient.core.storage.impl.local.paginated.wal.co.sbteebonsai.OSBTreeBonsaiDeleteComponentCO();
-      break;
-    case SBTREE_BONSAI_DELETE_CO:
-      walRecord = new OSBTreeBonsaiDeleteCO();
+      walRecord = new EmptyWALRecord();
       break;
     case CLUSTER_POSITION_MAP_INIT_PO:
       walRecord = new ClusterPositionMapBucketInitPO();
@@ -503,28 +461,153 @@ public final class OWALRecordsFactory {
     case CELL_BTREE_BUCKET_MULTI_VALUE_V2_INIT_PO:
       walRecord = new CellBTreeMultiValueV2BucketInitPO();
       break;
+    case CELL_BTREE_BUCKET_MULTI_VALUE_V2_CREATE_MAIN_LEAF_ENTRY_PO:
+      walRecord = new CellBTreeMultiValueV2BucketCreateMainLeafEntryPO();
+      break;
+    case CELL_BTREE_BUCKET_MULTI_VALUE_V2_REMOVE_MAIN_LEAF_ENTRY_PO:
+      walRecord = new CellBTreeMultiValueV2BucketRemoveMainLeafEntryPO();
+      break;
+    case CELL_BTREE_BUCKET_MULTI_VALUE_V2_APPEND_NEW_LEAF_ENTRY_PO:
+      walRecord = new CellBTreeMultiValueV2BucketAppendNewLeafEntryPO();
+      break;
+    case CELL_BTREE_BUCKET_MULTI_VALUE_V2_REMOVE_LEAF_ENTRY_PO:
+      walRecord = new CellBTreeMultiValueV2BucketRemoveLeafEntryPO();
+      break;
+    case CELL_BTREE_BUCKET_MULTI_VALUE_V2_INCREMENT_ENTRIES_COUNT_PO:
+      walRecord = new CellBTreeMultiValueV2BucketIncrementEntriesCountPO();
+      break;
+    case CELL_BTREE_BUCKET_MULTI_VALUE_V2_DECREMENT_ENTRIES_COUNT_PO:
+      walRecord = new CellBTreeMultiValueV2BucketDecrementEntriesCountPO();
+      break;
+    case CELL_BTREE_BUCKET_MULTI_VALUE_V2_ADD_NON_LEAF_ENTRY_PO:
+      walRecord = new CellBTreeMultiValueV2BucketAddNonLeafEntryPO();
+      break;
+    case CELL_BTREE_BUCKET_MULTI_VALUE_V2_REMOVE_NON_LEAF_ENTRY_PO:
+      walRecord = new CellBTreeMultiValueV2BucketRemoveNonLeafEntryPO();
+      break;
+    case CELL_BTREE_BUCKET_MULTI_VALUE_V2_ADD_ALL_LEAF_ENTRIES_PO:
+      walRecord = new CellBTreeMultiValueV2BucketAddAllLeafEntriesPO();
+      break;
+    case CELL_BTREE_BUCKET_MULTI_VALUE_V2_ADD_ALL_NON_LEAF_ENTRIES_PO:
+      walRecord = new CellBTreeMultiValueV2BucketAddAllNonLeafEntriesPO();
+      break;
+    case CELL_BTREE_BUCKET_MULTI_VALUE_V2_SHRINK_LEAF_ENTRIES_PO:
+      walRecord = new CellBTreeMultiValueV2BucketShrinkLeafEntriesPO();
+      break;
+    case CELL_BTREE_BUCKET_MULTI_VALUE_V2_SHRINK_NON_LEAF_ENTRIES_PO:
+      walRecord = new CellBTreeMultiValueV2BucketShrinkNonLeafEntriesPO();
+      break;
+    case CELL_BTREE_BUCKET_MULTI_VALUE_V2_SET_LEFT_SIBLING_PO:
+      walRecord = new CellBTreeMultiValueV2BucketSetLeftSiblingPO();
+      break;
+    case CELL_BTREE_BUCKET_MULTI_VALUE_V2_SET_RIGHT_SIBLING_PO:
+      walRecord = new CellBTreeMultiValueV2BucketSetRightSiblingPO();
+      break;
+    case CELL_BTREE_NULL_BUCKET_MULTI_VALUE_V2_SET_RIGHT_SIBLING_PO:
+      walRecord = new CellBTreeMultiValueV2NullBucketInitPO();
+      break;
+    case CELL_BTREE_NULL_BUCKET_MULTI_VALUE_V2_ADD_VALUE_PO:
+      walRecord = new CellBTreeMultiValueV2NullBucketAddValuePO();
+      break;
+    case CELL_BTREE_NULL_BUCKET_MULTI_VALUE_V2_INCREMENT_SIZE_PO:
+      walRecord = new CellBTreeMultiValueV2NullBucketIncrementSizePO();
+      break;
+    case CELL_BTREE_NULL_BUCKET_MULTI_VALUE_V2_DECREMENT_SIZE_PO:
+      walRecord = new CellBTreeMultiValueV2NullBucketDecrementSizePO();
+      break;
+    case CELL_BTREE_NULL_BUCKET_MULTI_VALUE_V2_REMOVE_VALUE_PO:
+      walRecord = new CellBTreeMultiValueV2NullBucketRemoveValuePO();
+      break;
+    case CELL_BTREE_ENTRY_POINT_MULTI_VALUE_V2_INIT_PO:
+      walRecord = new CellBTreeMultiValueV2EntryPointInitPO();
+      break;
+    case CELL_BTREE_ENTRY_POINT_MULTI_VALUE_V2_SET_TREE_SIZE_PO:
+      walRecord = new CellBTreeMultiValueV2EntryPointSetTreeSizePO();
+      break;
+    case CELL_BTREE_ENTRY_POINT_MULTI_VALUE_V2_SET_PAGES_SIZE_PO:
+      walRecord = new CellBTreeMultiValueV2EntryPointSetPagesSizePO();
+      break;
+    case CELL_BTREE_ENTRY_POINT_MULTI_VALUE_V2_SET_ENTRY_ID_PO:
+      walRecord = new CellBTreeMultiValueV2EntryPointSetEntryIdPO();
+      break;
+    case CELL_BTREE_BUCKET_MULTI_VALUE_V2_SWITCH_BUCKET_TYPE_PO:
+      walRecord = new CellBTreeMultiValueV2BucketSwitchBucketTypePO();
+      break;
+    case LOCAL_HASH_TABLE_V2_BUCKET_INIT_PO:
+      walRecord = new LocalHashTableV2BucketInitPO();
+      break;
+    case LOCAL_HASH_TABLE_V2_BUCKET_UPDATE_ENTRY_PO:
+      walRecord = new LocalHashTableV2BucketUpdateEntryPO();
+      break;
+    case LOCAL_HASH_TABLE_V2_BUCKET_DELETE_ENTRY_PO:
+      walRecord = new LocalHashTableV2BucketDeleteEntryPO();
+      break;
+    case LOCAL_HASH_TABLE_V2_BUCKET_ADD_ENTRY_PO:
+      walRecord = new LocalHashTableV2BucketAddEntryPO();
+      break;
+    case LOCAL_HASH_TABLE_V2_BUCKET_SET_DEPTH_PO:
+      walRecord = new LocalHashTableV2BucketSetDepthPO();
+      break;
+    case LOCAL_HASH_TABLE_V2_DIRECTORY_PAGE_SET_MAX_LEFT_CHILDREN_DEPTH_PO:
+      walRecord = new LocalHashTableV2DirectoryPageSetMaxLeftChildDepthPO();
+      break;
+    case LOCAL_HASH_TABLE_V2_DIRECTORY_PAGE_SET_MAX_RIGHT_CHILDREN_DEPTH_PO:
+      walRecord = new LocalHashTableV2DirectoryPageSetMaxRightChildDepthPO();
+      break;
+    case LOCAL_HASH_TABLE_V2_DIRECTORY_PAGE_SET_NODE_LOCAL_DEPTH_PO:
+      walRecord = new LocalHashTableV2DirectoryPageSetNodeLocalDepthPO();
+      break;
+    case LOCAL_HASH_TABLE_V2_DIRECTORY_PAGE_SET_POINTER_PO:
+      walRecord = new LocalHashTableV2DirectoryPageSetPointerPO();
+      break;
+    case LOCAL_HASH_TABLE_V2_DIRECTORY_FIRST_PAGE_SET_TREE_SIZE_PO:
+      walRecord = new LocalHashTableV2DirectoryFirstPageSetTreeSizePO();
+      break;
+    case LOCAL_HASH_TABLE_V2_DIRECTORY_FIRST_PAGE_SET_TOMBSTONE_PO:
+      walRecord = new LocalHashTableV2DirectoryFirstPageSetTombstonePO();
+      break;
+    case LOCAL_HASH_TABLE_V2_METADATA_PAGE_INIT_PO:
+      walRecord = new LocalHashTableV2MetadataPageInitPO();
+      break;
+    case LOCAL_HASH_TABLE_V2_METADATA_PAGE_SET_RECORDS_COUNT_PO:
+      walRecord = new LocalHashTableV2MetadataPageSetRecordsCountPO();
+      break;
+    case LOCAL_HASH_TABLE_V2_NULL_BUCKET_INIT_PO:
+      walRecord = new LocalHashTableV2NullBucketInitPO();
+      break;
+    case LOCAL_HASH_TABLE_V2_NULL_BUCKET_SET_VALUE_PO:
+      walRecord = new LocalHashTableV2NullBucketSetValuePO();
+      break;
+    case LOCAL_HASH_TABLE_V2_NULL_BUCKET_REMOVE_VALUE_PO:
+      walRecord = new LocalHashTableV2NullBucketRemoveValuePO();
+      break;
+    case LOCAL_HASH_TABLE_V2_DIRECTORY_FIRST_PAGE_SET_MAX_LEFT_CHILDREN_DEPTH_PO:
+      walRecord = new LocalHashTableV2DirectoryFirstPageSetMaxLeftChildDepthPO();
+      break;
+    case LOCAL_HASH_TABLE_V2_DIRECTORY_FIRST_PAGE_SET_MAX_RIGHT_CHILDREN_DEPTH_PO:
+      walRecord = new LocalHashTableV2DirectoryFirstPageSetMaxRightChildDepthPO();
+      break;
+    case LOCAL_HASH_TABLE_V2_DIRECTORY_FIRST_PAGE_SET_NODE_LOCAL_DEPTH_PO:
+      walRecord = new LocalHashTableV2DirectoryFirstPageSetNodeLocalDepthPO();
+      break;
+    case LOCAL_HASH_TABLE_V2_DIRECTORY_FIRST_PAGE_SET_POINTER_PO:
+      walRecord = new LocalHashTableV2DirectoryFirstPageSetPointerPO();
+      break;
     default:
-      if (idToTypeMap.containsKey(content[0]))
+      if (idToTypeMap.containsKey(recordId))
         try {
-          walRecord = (OWriteableWALRecord) idToTypeMap.get(content[0]).newInstance();
-        } catch (final InstantiationException | IllegalAccessException e) {
+          //noinspection unchecked
+          walRecord = (WriteableWALRecord) idToTypeMap.get(recordId).getDeclaredConstructor().newInstance();
+        } catch (final InstantiationException | NoSuchMethodException | InvocationTargetException | IllegalAccessException e) {
           throw new IllegalStateException("Cannot deserialize passed in record", e);
         }
       else
         throw new IllegalStateException("Cannot deserialize passed in wal record.");
     }
-
-    walRecord.fromStream(content, 1);
-
-    if (walRecord.getId() != content[0]) {
-      throw new IllegalStateException(
-          "Deserialized WAL record id does not match to the serialized record id " + walRecord.getId() + " - " + content[0]);
-    }
-
     return walRecord;
   }
 
-  public void registerNewRecord(final byte id, final Class<? extends OWriteableWALRecord> type) {
+  public void registerNewRecord(final int id, final Class<? extends WriteableWALRecord> type) {
     idToTypeMap.put(id, type);
   }
 }
